
  syntax = "proto3";

  package events;

  service EventsService {
     // Request doesn't require parameters
    rpc GetEvents(Empty) returns (EventResponse); 
    rpc GetEventByName(EventByNameRequest) returns (EventByNameResponse); 
    rpc GetEventImg(EventImgRequest) returns (EventImgResponse); 
    rpc UpdateEventWithNewService(UpdateEventRequest) returns (UpdateEventResponse); 
  }

  message Event {
    string _id = 1;     
    string name = 2;   
    repeated string services = 3; 
    bool isActive = 4;
    string img = 5; 
  }

// Empty message for requests that don't require parameters
message Empty {}

message EventByNameRequest {
  string name = 1;
}

message EventImgRequest {
  string img = 1;
}

message UpdateEventRequest {
  string serviceName = 1;
  repeated string events = 2;
}

message EventResponse {
  repeated Event events=1;
}

message EventByNameResponse {
  repeated Event event=1;
}

message EventImgResponse {
  string imgPath=1;
}

message UpdateEventResponse {
  string message=1;
  bool success=2;
}
